notif_select_2_sikertmesi

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
   <br>
   <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large',id: "newDemandButton", remote: true %>
 
-  <div class= "modal fade"  id="new-post-form">
+  <div class= "modal fade"  id="new-post-form" data-behavior="post_modal">
   </div>
 
   <div class = "panel panel-default" id ="posts">
