notif_select_2_sikertmesix

--- a/app/views/posts/_formEdit.html.erb
+++ b/app/views/posts/_formEdit.html.erb
@@ -46,7 +46,7 @@
 
         <div class="form-group">
            <%= f.label :all_labels_list %>
-           <%= f.select(:all_labels_list,@post.all_labels_list,{},{class: "form-control" ,id: "select2-label-list",multiple: "multiple"}) %>
+           <%= f.select(:all_labels_list,@post.all_labels_list,{},{class: "form-control" ,id: "select2-label-list",multiple: "multiple", style="width:100%"}) %>
          </div>
 
       <div class="modal-footer">
