--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,3 +1,3 @@
 <section id="posts_posts" data-channel="posts" data-stream-id="posts_stream">
-  <%= render posts, user: current_user}  %>
+  <%= render posts, user: current_user  %>
 </section>
