--- a/app/views/posts/likes/create.js.erb
+++ b/app/views/posts/likes/create.js.erb
@@ -1,1 +1,1 @@
-$("#post_<%=@post.id%>_likes").html("<%=j render partial: 'posts/likes', locals: {post: @post} %>")
+$("#post_<%=@post.id%>_likes").html("<%=j render partial: 'posts/likes', locals: {post: @post, user: current_user} %>")
