--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -19,8 +19,12 @@
     </div>
 
     <div class="btn-group">
-        <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-info', remote: true%>
-        <%= link_to 'Destroy',  post_path(post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
+        <% if policy(user,post).edit? %>
+          <%= link_to 'Edit', edit_post_path(post), class: 'btn btn-info', remote: true%>
+        <%end%>
+        <% if policy(user,post).destroy? %>
+          <%= link_to 'Destroy',  post_path(post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
+        <%end%>
     </div>
     <div class="name">
     <p>Demanded by: <%= link_to User.find_by(id: post.user_id).name, user_path(post.user_id) %>, at: <%= post.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
