--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,3 +1,19 @@
 var $postdiv = $('div#new-post-form');
+var divNd, index, nd;
+
+nd = $('.newDemand');
+
+divNd = $('.div-newDemand');
+
+postArray.push(@post);
+
+index = 0;
+while (index < postArray.length) {
+  $("[data-channel='posts']").prepend(postArray[index]);
+  index++;
+}
+divNd.hide();
+nd.text("0");
+
 $postdiv.modal("hide");
 //$postdiv.toggle();
