--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -22,14 +22,14 @@
     <%= link_to tag.name, tag_path(tag.name), :class => css_class %>
   <% end %>
   <br>
-  <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large',id: "newDemandButton", remote: true %>
+  <%= link_to 'New Demand', new_post_path, class: 'btn btn-primary btn-large', "data-behavior" => 'newDemandButton' ,remote: true %>
 
   <div class= "modal fade"  id="new-post-form" data-behavior="post_modal">
   </div>
 
   <div class = "panel panel-default" id ="posts">
     <div class = "panel-body">
-      <div class= "div-newDemand" style = "display:none" id="id-div-newDemand" >
+      <div class= "div-newDemand" style = "display:none" data-behavior="id-div-newDemand" >
         <span class="newDemand">0</span>
           <p>new demands</p>
       </div>
