--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,7 +29,7 @@
 
   <div class = "panel panel-default" id ="posts">
     <div class = "panel-body">
-      <div class= "div-newDemand" style = "display:none" data-behavior="id-div-newDemand" >
+      <div class= "div-newDemand" style = "display:none" id="id-div-newDemand" data-behavior="id-div-newDemand" >
         <span class="newDemand">0</span>
           <p>new demands</p>
       </div>
