--- a/app/views/posts/create.js.erb
+++ b/app/views/posts/create.js.erb
@@ -1,5 +1,5 @@
 var $postdiv = $('div#new-post-form');
-$("[data-channel='posts']").prepend('<%=j render @post %>');
+$("[data-channel='posts']").prepend('<%=j render @post, user: current_user %>');
 
 $postdiv.modal("hide");
 //$postdiv.toggle();
