yeni sisteme gecis denemeler1

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,8 +30,10 @@
   <div class = "panel panel-default" id ="posts">
     <div class = "panel-body">
       <div class= "div-newDemand" style = "display:none" id="id-div-newDemand" data-behavior="id-div-newDemand" >
+        <a class="posts_index" href="/posts" data-remote="true">
         <span class="newDemand">0</span>
           <p>new demands</p>
+         </a>
       </div>
 
       <ul class= "media-list">
