--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 <div class = "panel panel-default" id ="posts">
   <div class "panel-body">
     <ul class= "media-list">
-      <%= render @posts %>
+      <%= render @posts, user: current_user %>
     </ul>
   </div>
 </div>
