yeni sisteme gecis denemeler8

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -31,7 +31,7 @@
     <div class = "panel-body">
       <div class= "div-newDemand" style = "display:none" id="id-div-newDemand" data-behavior="id-div-newDemand" >
         <a class="posts_index" href="/posts" data-remote="true">
-        <span class="newDemand">0</span>
+        <span class="newDemand" data-behavior="new-demand-amount">0</span>
           <p>new demands</p>
          </a>
       </div>
