--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,9 +10,6 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require select2
- *= require select2-bootstrap
-
  */
 /*
 from sitepoint devise tutorial
@@ -20,7 +17,11 @@ from sitepoint devise tutorial
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import 'bootstrap/theme';
+@import "select2";
+@import "select2-bootstrap";
 @import "font-awesome";
+@import "*";
+@import "**/*";
 
 
 /* to style Devise specific flash messages, from Sitepoint */
