--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
       </ul>
       <ul class="nav navbar-nav pull-right">
         <% if user_signed_in? %>
-          <%= image_tag current_user.avatar.url(:small_thumb) %>
+          <li><%= image_tag current_user.avatar.url(:small_thumb) %></li>
           <li class="dropdown" >
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <%= current_user.name %>
