--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <meta name="current-user" id="<%= current_user.try(:id) %>">
   <meta name="viewport" content="width=device-width">
 </head>
-<body>
+<body class="<%= controller.controller_name %> <%= controller.action_name %>">
 	<!-- dropdown menu from sitepoint's devise tutorial -->
 	<nav class="navbar navbar-inverse">
   <div class="container">
