--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="modal-dialog">
   <div class="modal-content">
-    <%= form_for @post, remote: true, html: { style: "display:inline;" } do |f| %>
+    <%= form_for @post, remote: true,type: "js", html: { style: "display:inline;" } do |f| %>
       <div class="modal-body">
         <% if @post.errors.any? %>
           <div id="error_explanation">
