--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -3,14 +3,13 @@
   <div><%= hidden_field_tag :user_id, current_user.id %></div>
 
   <div class="form-group">
-    <%= f.label :title %>
-    <%= f.text_field :title, class: 'form-control', required: true %>
-  </div>
-
-  <div class="form-group">
     <%= f.label :comment %>
     <%= f.text_area :comment, class: 'form-control', required: true, cols: 3 %>
   </div>
+  <div class="field">
+    <%= f.label :price %><br>
+    <%= f.number_field :price , cols: 3%>
+  </div>
 
-  <%= f.submit 'Supply', class: 'btn btn-primary' %>
+ <%= f.button "Supply", class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>"} %>
 <% end %>
