comment adam etme6

--- a/app/views/comments/update.js.erb
+++ b/app/views/comments/update.js.erb
@@ -1,5 +1,4 @@
 var $commentdiv = $('div.comment[data-id="<%= @comment.id %>"]');
-$commentdiv.find(".comment-title").text("<%= @comment.title %>");
-$commentdiv.find(".comment-comment").text("<%= @comment.comment %>");
+$commentdiv.html("<%=escape_javascript(render('comments/comment', comment: @comment)) %>");
 var $commentdiv2 = $('div.comment_form-edit[data-id="<%= @comment.id %>"]');
 $commentdiv2.find('.editform').toggle();
