--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,11 +3,11 @@
 
 
 	<p class="comment-comment"><%=  comment.comment %></p>
-	<p class="comment-price"><%= number_to_currency(comment.price, locale: :de) %></p>
+	<p class="comment-price"><%= number_to_currency(comment.price, locale: :fr) %></p>
  	<div class="btn-group">
 
   		<%= link_to 'Edit', edit_post_comment_path(comment.commentable,comment), class: 'btn btn-info', method: :get, remote: true  %>
-  		<%= link_to 'Delete', post_comment_path(comment.commentable,comment), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
+  		<%= link_to 'Delete', post_comment_path(comment.commentable,comment), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger',remote: true, rel:"nofollow" %>
 
 	</div>
 	<p>Supplied by: <%= link_to comment.user.name, comment.user %>, at: <%= comment.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
