--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -8,7 +8,7 @@
   </div>
   <div class="field">
     <%= f.label :price %><br>
-    <%= f.number_field :price , cols: 3%>
+    <%= f.number_field :price, class: 'form-control', cols: 3 %>
   </div>
 
  <%= f.button "Supply", class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>"} %>
