--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,39 +12,26 @@
 
 <p>
   <strong>Price:</strong>
-  <%= @post.price %>
+  <%= number_to_currency(@post.price, locale: :fr) %>
 </p>
 
-<p>
-  <strong>Lat:</strong>
-  <%= @post.lat %>
-</p>
+<div class="post-pictures">
+  <% if post.pictures? %>
+    <% post.pictures.each do |p| %>
+      <%= image_tag(p.url(:thumb)) %>
+    <%end%>
 
-<p>
-  <strong>Lon:</strong>
-  <%= @post.lon %>
-</p>
-
-<p>
-  <strong>Likes:</strong>
-  <%= @post.likes %>
-</p>
-
-<p>
-  <strong>Picture url:</strong>
-  <%= @post.picture_url %>
-</p>
+  <% end %>
+</div>
 <div id="post_<%=@post.id%>_likes">
   <%=render partial: "likes", locals: {post: @post,user: current_user} %>
 </div>
-<div class= "new-comment-form" style = "display:none">
-</div>
-
 <div class="btn-group">
   <%= link_to 'Edit', edit_post_path(@post), class: 'btn btn-info' %>
   <%= link_to 'Delete', post_path(@post), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger' %>
-  <%= link_to 'Comment', new_post_comment_path(@post), class: 'btn btn-success',remote: true %>
-
+  <%= link_to 'Supply', new_post_comment_path(@post), class: 'btn btn-success',remote: true %>
+</div>
+<div class= "new-comment-form" style = "display:none">
 </div>
 
 <div id= "comments_list">
