--- a/app/views/comments/destroy.js.erb
+++ b/app/views/comments/destroy.js.erb
@@ -1,1 +1,1 @@
-$("[data-channel='comments']").html("<%= escape_javascript(render(@comments)%>");
+$("[data-channel='comments']").html("<%= escape_javascript(render(@comments))%>");
