--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Price:</strong>
-  <%= number_to_currency(@post.price, locale: :fr) %>
+  <%=@post.price%><i class='fa fa-eur'></i>
 </p>
 
 <div class="post-pictures">
