--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
 
     <h2 class="post-title"><%= link_to post.title, post_path(post) %></h2>
     <p class="post-description"><%= truncate(post.description, length: 350) %></p>
-    <p class="post-price"><%=  post.price %></p>
+    <p class="post-price"><%=  post.price %><i class='fa fa-eur'></i></p>
     <div class="post-pictures">
       <% if post.pictures? %>
         <% post.pictures.each do |p| %>
