--- a/app/views/fires/_fire.html.erb
+++ b/app/views/fires/_fire.html.erb
@@ -2,7 +2,7 @@
   <div class="fire" data-id="<%= fire.id %>">
 
   	<p class="fire-body"><%=  fire.body %></p>
-  	<p>Sent by:<%= link_to fire.user.name, fire.user %>, at: <%= comment.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
+  	<p>Sent by:<%= link_to fire.user.name, fire.user %>, at: <%= fire.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
 
   </div>
 </article>
