--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -2,7 +2,7 @@
   <div class="chatboxtitle">
     <i class="fa fa-comments"></i>
 
-    <h1><%= @chat.receiver.name %> </h1>
+    <h1><%= @chat.recipient.name %> </h1>
   </div>
   <br clear="all"/>
 </div>
