--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -5,10 +5,16 @@
 	<p class="comment-comment"><%=  comment.comment %></p>
 	<p class="comment-price"><%= comment.price%><i class='fa fa-eur'></i></p>
  	<div class="btn-group">
+		<% if policy(comment).edit? %>
   		<%= link_to 'Edit', edit_post_comment_path(comment.commentable,comment), class: 'btn btn-info', method: :get, remote: true  %>
-  		<%= link_to 'Delete', post_comment_path(comment.commentable,comment), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger',remote: true, rel:"nofollow" %>
+		<%end%>
+		<% if policy(comment).destroy? %>
+			<%= link_to 'Delete', post_comment_path(comment.commentable,comment), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger',remote: true, rel:"nofollow" %>
+		<%end%>
+		<% if policy(comment).buy? %>
 			<%= link_to 'Buy',initiate_chat_path(comment.id), class: "btn btn-success", "data-rip" => comment.user_id , method: :post%>
-	</div>
+		<%end%>
+</div>
 	<p>Supplied by: <%= link_to comment.user.name, comment.user %>, at: <%= comment.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
   	<div class="comment_form-edit" data-id="<%= comment.id %>">
   		<div class="editform" style="display:none">
