--- a/app/views/comments/index.js.erb
+++ b/app/views/comments/index.js.erb
@@ -1,4 +1,3 @@
 $("[data-channel='comments']").html("<%= escape_javascript(render @post.comments, user: current_user) %>")
-
-var $commentdiv = $('div.new-comment-form');
-$commentdiv.toggle();
+$("[data-behavior='id-div-newSupply']").hide()
+$("[data-behavior='new-supply-amount']").text("0")
