notif actioncable denemeler4

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
             </ul>
           </li>
           <li class="nav-item btn-group" data-behavior="notifications" data-stream-id="notifications_stream" data-notifications='<%= render template: "notifications/index", formats: [:json]  %>'>
-         <a class="dropdown-toggle nav-link" type="button" data-disable-with="<i class='fa fa-spinner fa-spin'></i>" data-behavior="notifications-link" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+         <a class="dropdown-toggle nav-link" type="button"  data-behavior="notifications-link" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <%= fa_icon "bell" %> <span data-behavior="unread-count"></span>
           </a>
          <div class="dropdown-menu" aria-labelledby="dropdownMenu1" data-behavior="notification-items">
