--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,7 +12,7 @@
 
       <div class="form-group">
         <%= f.label :user_name %><br />
-        <%= f.text_field :user_name%>
+        <%= f.text_field :user_name, required: true%>
       </div>
 
       <div class="form-group">
