--- a/app/views/users/finish_signup.html.erb
+++ b/app/views/users/finish_signup.html.erb
@@ -11,7 +11,7 @@
     <div class="form-group">
       <%= f.label :user_name %>
       <div class="controls">
-        <%= f.text_field :user_name, :autofocus => true, :value => '', class: 'form-control input-lg' %>
+        <%= f.text_field :user_name, :autofocus => true, :value => '', class: 'form-control input-lg', required: true %>
        </div>
     </div>
     <div class="form-group">
