--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,7 +35,7 @@
 </div>
 
   <div class= "div-newSupply" style = "display:none" id="id-div-newSupply" data-behavior="id-div-newSupply" >
-    <a class="supply_index" href="post/#{@post.id}/comments" data-remote="true">
+    <a class="supply_index" href="post/<%=@post.id%>/comments" data-remote="true">
     <span class="newSupply" data-behavior="new-supply-amount">0</span>
       <p>new supply</p>
      </a>
