--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,17 +1,31 @@
 <div class="chatboxhead">
-  <div class="chatboxtitle">
-    <i class="fa fa-comments"></i>
+  <div class="row">
 
-    <h1><%= @receiver.name %> </h1>
+    <div class="col-lg-6">
+      <div class="chatboxtitle">
+        <i class="fa fa-comments"></i>
+
+        <h1><%= @receiver.name %> </h1>
+      </div>
+      <br clear="all"/>
+    </div>
+    <div class="chatboxcontent">
+        <%= render 'fires/fires', chat: @chat %>
+    </div>
+    <div class="chatboxinput">
+      <%= form_for([@chat, @fire], :remote => true, :html => {id: "chat_form_#{@chat.id}"}) do |f| %>
+          <%= f.text_area :body, class: "chatboxtextarea", "data-cid" => @chat.id %>
+          <%= f.button "Send", class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>"} %>
+      <% end %>
+    </div>
+    <div class="col-lg-6">
+      <div class="input-group">
+        <span class="input-group-btn">
+          <button class="btn btn-default" type="button">Offer!</button>
+        </span>
+         <input type="text" class="form-control" placeholder="Name the price...">
+      </div>
+
+    </div>
   </div>
-  <br clear="all"/>
-</div>
-<div class="chatboxcontent">
-    <%= render 'fires/fires', chat: @chat %>
-</div>
-<div class="chatboxinput">
-  <%= form_for([@chat, @fire], :remote => true, :html => {id: "chat_form_#{@chat.id}"}) do |f| %>
-      <%= f.text_area :body, class: "chatboxtextarea", "data-cid" => @chat.id %>
-      <%= f.button "Send", class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>"} %>
-  <% end %>
 </div>
