--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,7 +1,7 @@
 <div class="chatboxhead">
   <div class="row">
 
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="chatboxtitle">
         <i class="fa fa-comments"></i>
 
@@ -18,7 +18,7 @@
           <%= f.button "Send", class: "btn btn-success", data: {disable_with: "<i class='fa fa-spinner fa-spin'></i>"} %>
       <% end %>
     </div>
-    <div class="col-lg-6">
+    <div class="col-md-6">
       <div class="input-group">
         <span class="input-group-btn">
           <button class="btn btn-default" type="button">Offer!</button>
