--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -37,17 +37,17 @@ input[readonly] {
 }
 
 a.tag {
-  color: $light-font-color;
+  color: @gray-light;
   background-color: #fff;
   padding: 0.5em 0.7em;
-  border: 1px solid $light-border-color;
-  @include border-radius($radius);
-  text-decoration: none;
+  border: 1px solid @gray-dark;
+border-radius: @border-radius-base;
+ text-decoration: none;
   margin-right: 10px;
   margin-bottom: 12px;
   font-size: 13px;
   &:hover {
-    border-color: $border-hover-color;
+    border-color: @brand-success;
     color: #555;
   }
 }
