--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -51,3 +51,7 @@ border-radius: $border-radius-base;
     color: #555;
   }
 }
+#search-bar .empty-message {
+  padding: 5px 10px;
+ text-align: center;
+}
