--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -55,3 +55,8 @@ border-radius: $border-radius-base;
   padding: 5px 10px;
  text-align: center;
 }
+#search-bar .posts-title {
+  margin: 0 20px 5px 20px;
+  padding: 3px 0;
+  border-bottom: 1px solid #ccc;
+}
