--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -12,7 +12,7 @@
 			<%= link_to 'Delete', post_comment_path(comment.commentable,comment), data: {confirm: 'Are you sure?'}, method: :delete, class: 'btn btn-danger',remote: true, rel:"nofollow" %>
 		<%end%>
 		<% if policy(comment).buy? %>
-			<%= link_to 'Buy',initiate_chat_path(comment.id), class: "btn btn-success", "data-rip" => comment.user_id , method: :post%>
+			<%= link_to 'Buy',initiate_order_path(comment.id), class: "btn btn-success", "data-rip" => comment.user_id , method: :post%>
 		<%end%>
 </div>
 	<p>Supplied by: <%= link_to comment.user.name, comment.user %>, at: <%= comment.created_at.strftime('%H:%M:%S %-d %B %Y') %></p>
