--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -26,7 +26,7 @@
         </span>
          <input type="text" class="form-control" placeholder="Name the price...">
       </div>
-
+      <h3 data-behavior="current_price"><%=@order.unit_price.to_f /100%><i class='fa fa-eur'> </h3>
     </div>
   </div>
 </div>
