--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -12,7 +12,7 @@
 
 <p>
   <strong>Price:</strong>
-  <%=@post.price%><i class='fa fa-eur'></i>
+  <%=@post.price.to_f /100%><i class='fa fa-eur'></i>
 </p>
 
 <div class="post-pictures">
