--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -27,6 +27,19 @@
          <input type="text" class="form-control" placeholder="Name the price...">
       </div>
       <h3 data-behavior="current_price"><%=@order.unit_price.to_f/100%><i class='fa fa-eur'></i> </h3>
+      <% if current_user %>
+
+    <%= form_tag transactioncreate_path(id: @order.id) do  %>
+      <script
+        src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+        data-amount="	<%= @order.total_price %>"
+        data-name="	<%= @order.seller.name %>"
+        data-description=" <%= @order.comment.comment %>"
+        data-email="<%= current_user.email %>"
+        data-locale="auto">
+      </script>
+    <% end %>
     </div>
   </div>
 </div>
