--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -32,10 +32,10 @@
     <%= form_tag transactioncreate_path(id: @order.id) do  %>
       <script
         src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-        data-amount="	<%= @order.total_price %>"
-        data-name="	<%= @order.seller.name %>"
-        data-description=" <%= @order.comment.comment %>"
+        data-key="pk_test_f7BgxvHQIobSLsuOl4v71eAc"
+        data-amount="<%= @order.total_price %>"
+        data-name="<%= @order.seller.name %>"
+        data-description="<%= @order.comment.comment %>"
         data-email="<%= current_user.email %>"
         data-locale="auto">
       </script>
