--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -40,6 +40,6 @@
   </div>
 
 <div>
-  <%= react_component 'CommentsContainer', { postview: render(partial: 'posts/post.json', locals: {post: @post}), path: users_path,post: @post} %>
+  <%= react_component 'CommentsContainer', { postview: render(partial: 'posts/post.json', locals: {post: @post}), path: users_path,post: @post,current_user: current_user} %>
 </div>
 </div>
